# glow

include/glow/Backend/: Backend.h
lib/Backends/CPU/: CPUBackend.h
lib/Backends/Interpreter/: Interpreter.h  InterpreterDeviceManager.cpp
lib/Backends/OpenCL/: OpenCL.h  OpenCLDeviceManager.cpp  OpenCLDeviceManager.h
lib/Importer/: ONNXIFIModelLoader.cpp  ONNXModelLoader.cpp
lib/LLVMIRCodeGen/: DebugInfo.cpp
lib/Onnxifi/: Base.cpp  Base.h  CMakeLists.txt  onnxifiGlowBackend.cpp
tests/unittests/: BackendCorrectnessTest.cpp  BackendTestUtils.h  PartitionerTest.cpp  quantizationTest.cpp
